More work about exception Handling, and add more tests.